--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -172,6 +172,99 @@ functions:
           ATLAS_REPL_SRV='${ATLAS_REPL_SRV}' ATLAS_SHRD_SRV='${ATLAS_SHRD_SRV}' ATLAS_FREE_SRV='${ATLAS_FREE_SRV}' ATLAS_TLS11_SRV='${ATLAS_TLS11_SRV}' ATLAS_TLS12_SRV='${ATLAS_TLS12_SRV}' \
           sh ${PROJECT_DIRECTORY}/.evergreen/run-atlas-tests.sh
 
+  "run ocsp test":
+    - command: shell.exec
+      type: test
+      params:
+        shell: bash
+        working_dir: "src"
+        script: |
+          ${PREPARE_SHELL}
+
+          MONGODB_URI="${MONGODB_URI}" \
+          SWIFT_VERSION=${SWIFT_VERSION} \
+            ${PROJECT_DIRECTORY}/.evergreen/run-ocsp-test.sh
+
+  run-valid-ocsp-server:
+    - command: shell.exec
+      params:
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+          ${PYTHON} -m virtualenv ./venv
+          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+    - command: shell.exec
+      params:
+        background: true
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+
+          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          --ca_file ${OCSP_ALGORITHM}/ca.pem \
+          --ocsp_responder_cert ${OCSP_ALGORITHM}/ca.crt \
+          --ocsp_responder_key ${OCSP_ALGORITHM}/ca.key \
+          -p 8100 -v
+
+  run-revoked-ocsp-server:
+    - command: shell.exec
+      params:
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+          ${PYTHON} -m virtualenv ./venv
+          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+    - command: shell.exec
+      params:
+        background: true
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+
+          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          --ca_file ${OCSP_ALGORITHM}/ca.pem \
+          --ocsp_responder_cert ${OCSP_ALGORITHM}/ca.crt \
+          --ocsp_responder_key ${OCSP_ALGORITHM}/ca.key \
+          -p 8100 \
+          -v \
+          --fault revoked
+
+  run-valid-delegate-ocsp-server:
+    - command: shell.exec
+      params:
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+          ${PYTHON} -m virtualenv ./venv
+          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+    - command: shell.exec
+      params:
+        background: true
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+
+          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          --ca_file ${OCSP_ALGORITHM}/ca.pem \
+          --ocsp_responder_cert ${OCSP_ALGORITHM}/ocsp-responder.crt \
+          --ocsp_responder_key ${OCSP_ALGORITHM}/ocsp-responder.key \
+          -p 8100 -v
+
+  run-revoked-delegate-ocsp-server:
+    - command: shell.exec
+      params:
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+          ${PYTHON} -m virtualenv ./venv
+          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+    - command: shell.exec
+      params:
+        background: true
+        script: |
+          cd ${DRIVERS_TOOLS}/.evergreen/ocsp
+
+          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          --ca_file ${OCSP_ALGORITHM}/ca.pem \
+          --ocsp_responder_cert ${OCSP_ALGORITHM}/ocsp-responder.crt \
+          --ocsp_responder_key ${OCSP_ALGORITHM}/ocsp-responder.key \
+          -p 8100 \
+          -v \
+          --fault revoked
+
   "cleanup":
     - command: shell.exec
       params:
@@ -416,6 +509,330 @@ tasks:
       commands:
         - func: "run atlas tests"
 
+    - name: test-ocsp-rsa-valid-cert-server-staples
+      tags: ["ocsp", "ocsp-rsa", "ocsp-staple"]
+      commands:
+        - func: "run-valid-ocsp-server"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-rsa-invalid-cert-server-staples
+      tags: ["ocsp", "ocsp-rsa", "ocsp-staple"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-valid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: "run-valid-ocsp-server"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-rsa-invalid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-soft-fail
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-rsa-malicious-invalid-cert-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-malicious-no-responder-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-delegate-valid-cert-server-staples
+      tags: ["ocsp", "ocsp-rsa", "ocsp-staple"]
+      commands:
+        - func: run-valid-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-rsa-delegate-invalid-cert-server-staples
+      tags: ["ocsp", "ocsp-rsa", "ocsp-staple"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-delegate-valid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: run-valid-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-rsa-delegate-invalid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-rsa-delegate-malicious-invalid-cert-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-rsa"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "rsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "rsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "rsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-valid-cert-server-staples
+      tags: ["ocsp", "ocsp-ecdsa", "ocsp-staple"]
+      commands:
+        - func: run-valid-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-ecdsa-invalid-cert-server-staples
+      tags: ["ocsp", "ocsp-ecdsa", "ocsp-staple"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-valid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-valid-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-ecdsa-invalid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-soft-fail
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-ecdsa-malicious-invalid-cert-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-revoked-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-malicious-no-responder-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-delegate-valid-cert-server-staples
+      tags: ["ocsp", "ocsp-ecdsa", "ocsp-staple"]
+      commands:
+        - func: run-valid-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-ecdsa-delegate-invalid-cert-server-staples
+      tags: ["ocsp", "ocsp-ecdsa", "ocsp-staple"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-delegate-valid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-valid-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "true"
+
+    - name: test-ocsp-ecdsa-delegate-invalid-cert-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
+    - name: test-ocsp-ecdsa-delegate-malicious-invalid-cert-mustStaple-server-does-not-staple
+      tags: ["ocsp", "ocsp-ecdsa"]
+      commands:
+        - func: run-revoked-delegate-ocsp-server
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+        - func: "bootstrap mongo-orchestration"
+          vars:
+            ORCHESTRATION_FILE: "ecdsa-basic-tls-ocsp-mustStaple-disableStapling.json"
+        - func: "run ocsp test"
+          vars:
+            OCSP_ALGORITHM: "ecdsa"
+            OCSP_TLS_SHOULD_SUCCEED: "false"
+
     - name: "check-format"
       commands:
       - func: "format"
@@ -459,14 +876,23 @@ axes:
       - id: ubuntu-18.04
         display_name: "Ubuntu 18.04"
         run_on: ubuntu1804-test
+        variables:
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          VENV_BIN_DIR: "bin"
 
       - id: ubuntu-16.04
         display_name: "Ubuntu 16.04"
         run_on: ubuntu1604-test
+        variables:
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          VENV_BIN_DIR: "bin"
 
       - id: macos-10.14
         display_name: "macOS 10.14"
         run_on: macos-1014
+        variables:
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          VENV_BIN_DIR: "bin"
 
   - id: topology
     display_name: Topology
@@ -551,6 +977,35 @@ buildvariants:
   tasks:
     - ".atlas-connect"
 
+- matrix_name: "ocsp"
+  matrix_spec:
+    os-fully-featured:
+      - "ubuntu-18.04"
+      - "ubuntu-16.04"
+    mongodb-version:
+      - latest
+      - 4.4
+    swift-version:
+      - 5.2
+  display_name: "OCSP ${swift-version} ${os-fully-featured} ${mongodb-version}"
+  batchtime: 20160 # 14 days
+  tasks:
+    - ".ocsp"
+
+- matrix_name: "ocsp-macos"
+  matrix_spec:
+    os-fully-featured:
+      - macos-10.14
+    swift-version:
+      - 5.2
+    mongodb-version:
+      - latest
+      - 4.4
+  display_name: "OCSP ${swift-version} ${os-fully-featured} ${mongodb-version}"
+  batchtime: 20160 # 14 days
+  tasks:
+      # macOS MongoDB servers do not staple OCSP responses and only support RSA.
+      - name: ".ocsp-rsa !.ocsp-staple"
 
 # define separate matrices for swift 5.3 that excludes macOS 10.14. unfortunately
 # as of now we cannot remove entire buildvariants via rule from the matrices above
