--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -194,14 +194,14 @@ functions:
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
           ${PYTHON} -m virtualenv ./venv
-          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+          ./venv/${VENV_BIN_DIR}/python3 -m pip install -r mock-ocsp-responder-requirements.txt
     - command: shell.exec
       params:
         background: true
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
 
-          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          ./venv/${VENV_BIN_DIR}/python3 ocsp_mock.py \
           --ca_file ${OCSP_ALGORITHM}/ca.pem \
           --ocsp_responder_cert ${OCSP_ALGORITHM}/ca.crt \
           --ocsp_responder_key ${OCSP_ALGORITHM}/ca.key \
@@ -213,14 +213,14 @@ functions:
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
           ${PYTHON} -m virtualenv ./venv
-          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+          ./venv/${VENV_BIN_DIR}/python3 -m pip install -r mock-ocsp-responder-requirements.txt
     - command: shell.exec
       params:
         background: true
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
 
-          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          ./venv/${VENV_BIN_DIR}/python3 ocsp_mock.py \
           --ca_file ${OCSP_ALGORITHM}/ca.pem \
           --ocsp_responder_cert ${OCSP_ALGORITHM}/ca.crt \
           --ocsp_responder_key ${OCSP_ALGORITHM}/ca.key \
@@ -234,14 +234,14 @@ functions:
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
           ${PYTHON} -m virtualenv ./venv
-          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+          ./venv/${VENV_BIN_DIR}/python3 -m pip install -r mock-ocsp-responder-requirements.txt
     - command: shell.exec
       params:
         background: true
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
 
-          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          ./venv/${VENV_BIN_DIR}/python3 ocsp_mock.py \
           --ca_file ${OCSP_ALGORITHM}/ca.pem \
           --ocsp_responder_cert ${OCSP_ALGORITHM}/ocsp-responder.crt \
           --ocsp_responder_key ${OCSP_ALGORITHM}/ocsp-responder.key \
@@ -253,14 +253,14 @@ functions:
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
           ${PYTHON} -m virtualenv ./venv
-          ./venv/${VENV_BIN_DIR}/python -m pip install -r mock-ocsp-responder-requirements.txt
+          ./venv/${VENV_BIN_DIR}/python3 -m pip install -r mock-ocsp-responder-requirements.txt
     - command: shell.exec
       params:
         background: true
         script: |
           cd ${DRIVERS_TOOLS}/.evergreen/ocsp
 
-          ./venv/${VENV_BIN_DIR}/python ocsp_mock.py \
+          ./venv/${VENV_BIN_DIR}/python3 ocsp_mock.py \
           --ca_file ${OCSP_ALGORITHM}/ca.pem \
           --ocsp_responder_cert ${OCSP_ALGORITHM}/ocsp-responder.crt \
           --ocsp_responder_key ${OCSP_ALGORITHM}/ocsp-responder.key \
@@ -904,21 +904,21 @@ axes:
         display_name: "Ubuntu 18.04"
         run_on: ubuntu1804-test
         variables:
-          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
 
       - id: ubuntu-16.04
         display_name: "Ubuntu 16.04"
         run_on: ubuntu1604-test
         variables:
-          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
 
       - id: macos-10.14
         display_name: "macOS 10.14"
         run_on: macos-1014
         variables:
-          PYTHON: "/opt/mongodbtoolchain/v3/bin/python"
+          PYTHON: "/opt/mongodbtoolchain/v3/bin/python3"
           VENV_BIN_DIR: "bin"
 
   - id: topology
