--- a/.evergreen/config.yml
+++ b/.evergreen/config.yml
@@ -109,6 +109,7 @@ functions:
             TOPOLOGY=${TOPOLOGY} \
             SSL=${SSL} \
             AUTH=${AUTH} \
+            REQUIRE_API_VERSION=${REQUIRE_API_VERSION} \
             sh ${DRIVERS_TOOLS}/.evergreen/run-orchestration.sh
     # run-orchestration generates expansion file with the MONGODB_URI for the cluster
     - command: expansions.update
@@ -157,6 +158,8 @@ functions:
           SSL=${SSL} \
           AUTH=${AUTH} \
           SWIFT_VERSION=${SWIFT_VERSION} \
+          MONGODB_API_VERSION=${MONGODB_API_VERSION} \
+          TEST_FILTER=${TEST_FILTER} \
             ${PROJECT_DIRECTORY}/.evergreen/run-tests.sh
     
   "upload test results":
@@ -991,6 +994,38 @@ axes:
           SSL: "nossl"
           AUTH: "noauth"
 
+  - id: auth
+    display_name: Auth
+    values:
+      - id: auth
+        display_name: Auth
+        variables:
+          AUTH: "auth"
+
+  - id: versionedAPI
+    display_name: API Version
+    values:
+    # Test against a cluster with requireApiVersion=1.
+      - id: requireApiVersion1
+        display_name: Require V1
+        variables:
+          # REQUIRE_API_VERSION is set to make drivers-evergreen-tools
+          # start a cluster with the requireApiVersion parameter.
+          REQUIRE_API_VERSION: "1"
+          # MONGODB_API_VERSION is the apiVersion to use in the test suite.
+          MONGODB_API_VERSION: "1"
+          # Test with auth to ensure we correctly append versioned API options
+          # to authentication commands, since we can't test that via comamand
+          # monitoring.
+          AUTH: "auth"
+    # Test against a cluster with acceptAPIVersion2 but without
+    # requireApiVersion, and don't automatically add apiVersion to
+    # clients created in the test suite.
+      - id: acceptAPIVersion2
+        display_name: Accept V2
+        variables:
+          ORCHESTRATION_FILE: "versioned-api-testing.json"
+          TEST_FILTER: "VersionedAPITests"
 
 buildvariants:
 
@@ -1058,6 +1093,17 @@ buildvariants:
   tasks:
       # macOS MongoDB servers do not staple OCSP responses and only support RSA.
       - name: ".ocsp-rsa !.ocsp-staple"
+
+- matrix_name: "versioned-api-tests"
+  matrix_spec:
+    os-fully-featured: ubuntu-18.04
+    swift-version: "5.3"
+    versionedAPI: "*"
+  display_name: "Versioned API ${versionedAPI} ${swift-version} ${os-fully-featured}"
+  batchtime: 10080  # 7 days
+  tasks:
+    # Versioned API was introduced in MongoDB 4.7
+    - "test-latest-standalone"
 
 # define separate matrices for swift 5.3 that excludes macOS 10.14. unfortunately
 # as of now we cannot remove entire buildvariants via rule from the matrices above
